--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: java_app
     build:
       context: ../app-area-curricular-backend
-      dockerfile: ./Dockerfile
+      dockerfile: ../docker/Dockerfile
     image: pee-java_app:1.0.0
     ports:
       - "8080:8080"
